# pto-dsl

./: .gitignore  pyproject.toml
.agent/skills/translate_cpp2py/: SKILL.md
.github/workflows/: ci.yml
docker/: Dockerfile  README.md
examples/aot/fast_hadamard/: compile.sh  hadamard_builder.py  hadamard_quant_builder.py  run_hadamard_quant.py
examples/aot/fast_inverse/: README.md  inverse_builder.py  run_inverse.py
examples/aot/flash_attention/: .gitignore  README.md  caller.cpp  compile.sh  fa_builder.py  run.py
examples/aot/matmul_optimization_guide/: README.md  bench_matmul.py  common_utils.py  compile.sh  matmul_optim_guide.md  matmul_optim_guide_zh.md  run_matmul.py  step1_baseline.py  step1_baseline_numpy_sim.py  step2_doublebuffer.py  step3_swizzle.py  step3_swizzle_numpy_sim.py  step4_manual_pipelining.py
examples/aot/print_tile/: .gitignore  README.md  caller.cpp  compile.sh  print_builder.py  run_print.py
examples/aot/sinkhorn_demo/: .gitignore  README.md  caller_sinkhorn_k4.cpp  compile.sh  conftest.py  jit_util_sinkhorn.py  pto_sinkhorn_demo_zh.md  sinkhorn_k4_builder.py  sinkhorn_kernel_note.md  test_sinkhorn.py
examples/aot/topk/: .gitignore  README.md  caller.py  compile.sh  run_topk.py  topk_builder.py
examples/aot/tpushpop/: .gitignore
examples/jit/scan/: README.md  (+2 more)
ptodsl/api/: control_flow.py  pto.py  pto_general.py  scalar.py  synchronization.py  tile.py  type_def.py
ptodsl/compiler/: ir.py  jit.py
ptodsl/utils/: __init__.py  codegen.py  npu_info.py
tests/frontend/: test_location_info.py  test_multifunc_ir.py  tooling.py
(+107 files in other folders)
