[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pto-dsl"
version = "0.1.2"
description = "Pythonic DSL for PTO-ISA"
requires-python = ">=3.9"
authors = [
  { name = "pto-dsl contributors" }
]

[project.optional-dependencies]
dev = ["matplotlib"]

[tool.setuptools]
packages = [
  "ptodsl",
  "ptodsl.api",
  "ptodsl.compiler",
  "ptodsl.utils",
]

[tool.setuptools.package-dir]
ptodsl = "ptodsl"
